[gd_scene load_steps=3 format=3 uid="uid://btj8qdktftdrd"]

[ext_resource type="Script" uid="uid://cl1bbpdkku3g1" path="res://ui.gd" id="1_3b2b5"]
[ext_resource type="FontFile" uid="uid://bkar3rr641ksq" path="res://Xolonium-Regular.ttf" id="1_b3bc3"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_3b2b5")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 45.0
offset_bottom = 78.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_b3bc3")
theme_override_font_sizes/font_size = 64

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = -50.0
offset_right = 271.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_b3bc3")
theme_override_font_sizes/font_size = 64

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
